--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Resources/Resource.es.resx
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Resources/Resource.es.resx
@@ -148,10 +148,10 @@
     <value>El campo no puede quedar vacío</value>
   </data>
   <data name="ErrorRole" xml:space="preserve">
-    <value>Debe seleccionar un rol.</value>
+    <value>Debe seleccionar un rol</value>
   </data>
   <data name="ErrorPassword" xml:space="preserve">
-    <value>La contraseña es incorrecta.</value>
+    <value>La contraseña es incorrecta</value>
   </data>
   <data name="ErrorPassword2" xml:space="preserve">
     <value>Las contraseñas no coinciden</value>
@@ -230,5 +230,107 @@
   </data>
   <data name="ErrorExpenseType" xml:space="preserve">
     <value>Debe seleccionar un tipo de gasto</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Cargando...</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Correo electrónico</value>
+  </data>
+  <data name="EmailPlaceHolder" xml:space="preserve">
+    <value>Escribe tu email</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Contraseña</value>
+  </data>
+  <data name="PasswordPlaceHolder" xml:space="preserve">
+    <value>Escribe tu contraseña</value>
+  </data>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>¿Ha olvidado la contraseña?</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>Fecha inicio</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>Fecha de finalización</value>
+  </data>
+  <data name="Document" xml:space="preserve">
+    <value>Documento</value>
+  </data>
+  <data name="DocumentPlaceHolder" xml:space="preserve">
+    <value>Escriba su número de documento</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>Nombre</value>
+  </data>
+  <data name="FirstNamePlaceHolder" xml:space="preserve">
+    <value>Escriba su nombre</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Apellidos</value>
+  </data>
+  <data name="LastNamePlaceHolder" xml:space="preserve">
+    <value>Escriba su apellido</value>
+  </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Número de teléfono</value>
+  </data>
+  <data name="PhonePlaceHolder" xml:space="preserve">
+    <value>Escribe tu número de teléfono</value>
+  </data>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Confirmar contraseña</value>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>Registrarse como</value>
+  </data>
+  <data name="RolePlaceHolder" xml:space="preserve">
+    <value>Seleccionar un rol</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Guardar</value>
+  </data>
+  <data name="CityVisited" xml:space="preserve">
+    <value>Ciudad visitada</value>
+  </data>
+  <data name="CityVisitedPlaceHolder" xml:space="preserve">
+    <value>Ciudad que has visitado</value>
+  </data>
+  <data name="ExpenseType" xml:space="preserve">
+    <value>Tipo de gasto</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Detalles del gasto</value>
+  </data>
+  <data name="DetailsPlaceHolder" xml:space="preserve">
+    <value>Sobre mis gastos</value>
+  </data>
+  <data name="Value" xml:space="preserve">
+    <value>Valor</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Fecha</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Editar</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Eliminar</value>
+  </data>
+  <data name="DeleteTripMessage" xml:space="preserve">
+    <value>¿Desea eliminar este viaje?</value>
+  </data>
+  <data name="EmailConfirm" xml:space="preserve">
+    <value>Escriba su correo electrónico para confirmar</value>
+  </data>
+  <data name="DeleteExpenseMessage" xml:space="preserve">
+    <value>¿Quieres eliminar este gasto?</value>
+  </data>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Contraseña actual</value>
+  </data>
+  <data name="NewPassword" xml:space="preserve">
+    <value>Nueva contraseña</value>
   </data>
 </root>
