--- a/ExpensesManagment.Prism/ExpensesManagment.Prism/Resources/Resource.resx
+++ b/ExpensesManagment.Prism/ExpensesManagment.Prism/Resources/Resource.resx
@@ -231,4 +231,106 @@
   <data name="ErrorExpenseType" xml:space="preserve">
     <value>You must select an expense type</value>
   </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Loading...</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="EmailPlaceHolder" xml:space="preserve">
+    <value>Write your email</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="PasswordPlaceHolder" xml:space="preserve">
+    <value>Write your password</value>
+  </data>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>Forgot your password?</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>End Date</value>
+  </data>
+  <data name="Document" xml:space="preserve">
+    <value>Document</value>
+  </data>
+  <data name="DocumentPlaceHolder" xml:space="preserve">
+    <value>Write your document number</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>First Name</value>
+  </data>
+  <data name="FirstNamePlaceHolder" xml:space="preserve">
+    <value>Write your first name</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Last Name</value>
+  </data>
+  <data name="LastNamePlaceHolder" xml:space="preserve">
+    <value>Write your last name</value>
+  </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Phone Number</value>
+  </data>
+  <data name="PhonePlaceHolder" xml:space="preserve">
+    <value>Write your phone number</value>
+  </data>
+  <data name="ConfirmPassword" xml:space="preserve">
+    <value>Confirm Password</value>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>Register as</value>
+  </data>
+  <data name="RolePlaceHolder" xml:space="preserve">
+    <value>Select a role</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="CityVisited" xml:space="preserve">
+    <value>City visited</value>
+  </data>
+  <data name="CityVisitedPlaceHolder" xml:space="preserve">
+    <value>City you've visited</value>
+  </data>
+  <data name="ExpenseType" xml:space="preserve">
+    <value>Expense type</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Details of the expense</value>
+  </data>
+  <data name="DetailsPlaceHolder" xml:space="preserve">
+    <value>About my expense </value>
+  </data>
+  <data name="Value" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="DeleteTripMessage" xml:space="preserve">
+    <value>Do you want to delete this trip</value>
+  </data>
+  <data name="EmailConfirm" xml:space="preserve">
+    <value>Write your email to confirm</value>
+  </data>
+  <data name="DeleteExpenseMessage" xml:space="preserve">
+    <value>Do you want to delete this expense</value>
+  </data>
+  <data name="CurrentPassword" xml:space="preserve">
+    <value>Current Password</value>
+  </data>
+  <data name="NewPassword" xml:space="preserve">
+    <value>New Password</value>
+  </data>
 </root>
